<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_timeline"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_timeline" />
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/menu_whisper"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_whisper" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/menu_user_edit"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_user_edit" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="@string/menu_logout" />
</menu>
