<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_whisper"
        android:title="@string/menu_whisper"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_user_edit"
        android:title="@string/menu_user_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>
